--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,11 @@
 root = true
 
-[*.{html,css,ts,tsx,json}]
+[*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
 indent_style = space
+
+[*.{html,css,ts,tsx,json}]
 indent_size = 2
