--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,4 @@ chrono = { version = "0.4.38", features = ["std", "clock", "now", "serde"] }
 serde_json = "1.0.127"
 serde = { version = "1.0.209", features = ["derive"] }
 rand = "0.8.5"
+diesel = { version = "2.2.4", features = ["chrono", "postgres", "uuid"] }
