--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0.127"
 serde = { version = "1.0.209", features = ["derive"] }
 rand = "0.8.5"
 diesel = { version = "2.2.4", features = ["chrono", "postgres", "uuid"] }
+dotenvy = "0.15.7"
